tools/fleet/fixtures/packets/invalid/unknown-expected-base.case
source=valid-work.packet
mutation=set Expected-Base to UNKNOWN
expected=invalid
